fix scrollbar

--- a/public/style.css
+++ b/public/style.css
@@ -1,28 +1,29 @@
 body,
 html {
-    width: 100%;
-    height: 100%;
-    background: #17191f;
-    color: #fff;
+  width: 100%;
+  height: 100%;
+  background: #17191f;
+  color: #fff;
 }
 
-a, a:hover {
-    color: #4ea2df;
+a,
+a:hover {
+  color: #4ea2df;
 }
 
 .invisible {
-    display: none;
+  display: none;
 }
 
 .avatar_img_navbar {
-    width: 50px;
-    height: 50px;
-    background-color: #fff;
+  width: 50px;
+  height: 50px;
+  background-color: #fff;
 }
 
 .header_avatar_dropdown {
-    padding: 0;
-    padding-left: .5rem;
+  padding: 0;
+  padding-left: 0.5rem;
 }
 
 .footer {
@@ -40,21 +41,31 @@ a, a:hover {
 }
 
 .nav-container {
-    margin: 10px auto;
+  margin: 10px auto;
 }
 
 .navbar {
-    border-radius: 5px;
+  border-radius: 5px;
 }
 
 .box {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 .button-player {
-    border-radius: 0 0 .2rem .2rem;
+  border-radius: 0 0 0.2rem 0.2rem;
 }
 
 .modal {
-    color: #212529;
+  color: #212529;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(52, 58, 64, 0.7);
+  border-radius: 5px;
 }
